FIX: adjust contactIcons styles to ensure proper wrapping of icons

--- a/src/app/pages/home/contact/contact.module.scss
+++ b/src/app/pages/home/contact/contact.module.scss
@@ -15,9 +15,10 @@
 
   .contactIcons {
     @include flex(center, start, false, 40px);
+    flex-wrap   : wrap;
     width       : 100%;
     margin-top  : 40px;
-    
+
     a {
       @include flex(center, center);
       color     : var(--hc-text-strong);
